# ipcmodule

app/ipcreceiver/src/: receiver.cpp
app/ipcreceiverElectronVideo/src/: receiver.cpp
app/ipcsender/src/: sender.cpp
script/: build-mac.sh  build-windows.bat
script/proj.cmake/: CMakeLists.txt  common.cmake
script/proj.cmake/ipcmodule/: CMakeLists.txt
script/proj.cmake/ipcreceiver/: CMakeLists.txt
script/proj.cmake/ipcreceiverElectronVideo/: CMakeLists.txt
script/proj.cmake/ipcsender/: CMakeLists.txt
src/: ipc_datareceiver.cpp  ipc_datasender.cpp
